tests/baselines/reference/indexerAsOptional.errors.txt
indexerAsOptional.ts(3,9): error TS1019: An index signature parameter cannot have a question mark.
indexerAsOptional.ts(8,9): error TS1019: An index signature parameter cannot have a question mark.


==== indexerAsOptional.ts (2 errors) ====
    interface indexSig {
        //Index signatures can't be optional
        [idx?: number]: any; //err
            ~
!!! error TS1019: An index signature parameter cannot have a question mark.
    }
    
    class indexSig2 {
        //Index signatures can't be optional
        [idx?: number]: any //err
            ~
!!! error TS1019: An index signature parameter cannot have a question mark.
    }